2011-11-25  Giuseppe Scrivano  <giuseppe@southpole.se>

	fix syscall return value register.
	* src/arch/linux_i386.c (SC_RET_ADDR): Fix syscall return register.
	* src/arch/linux_x86_64.c (SC_RET_ADDR): Likewise.

	fix test suite build.
	* tests/Makefile.am (LDADD): Use libroach.la instead of libroach.a

	add plugins support.
	* src//plugins.h: New file.
	* src/plugins.c: Likewise.
	* src/plugins/plugin.h: Likewise.
	* src/plugins/Makefile.am: Likewise.
	* src/plugins/inhibit/Makefile.am: Likewise.
	* src/plugins/inhibit/inhibit.c: Likewise.
	* Makefile.am: Generate the library using libtool.
	(SUBDIRS): Add plugins.
	* configure.ac: Look for libtool.  Update makefiles list.
	* cockroach.c: Include "plugins.h".
	(long_options): Add PLUGIN_ARG and PLUGIN_ADD_ARG.
	(main): Handle PLUGIN_ARG and PLUGIN_ADD_ARG.  Remove inhibit handler
	used by default.

2011-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	warnings fixes.
	* src/roach.c: Include unistd.h.
	Include sys/wait.h.
	(roach_rot_function): Pass NULL to wait.
	(roach_rot_process): Likewise.

	* src/bitmap.c (needed_size): Do something useful.
	(roach_bitmap_flip_all): Return something.

2011-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* src/arch/linux_generic.c (roach_syscall_inhibit): Cast to long
	to avoid truncation in 64bit platforms.

2011-11-08  Giuseppe Scrivano  <giuseppe@southpole.se>

	* src/roach.h: Declare roach_get_sc_ret.
	* src/roach.c (roach_get_sc_ret): New function.

	* src/roach.h: Rename roach_spawn_process to roach_rot_process.  Define
	new function roach_rot_function.
	* src/roach.c (roach_spawn_process): Rename to...
	(roach_rot_process): ...this.
	(roach_rot_function): New function.

	* src/cockroach.c (main): Fix roach_rot_process call.

	* src/roach.c (roach_reg_syscall): Pass correctly the DATA argument to
	the roach_make_hook function.

	* src/arch/linux_generic.c (OFFSET) [! OFFSET]: Define macro.
	* src/arch/linux_i386.c (OFFSET): Remove definition.